# Unit-C-Testing-With-CMocka

./: CMakeLists.txt  README.md
I2C/: CMakeLists.txt  README.md  i2c.c  i2c.h  test_do_something.c  test_open_i2c.c
Uptime/: CMakeLists.txt  README.md  calc_uptime.c  proc_uptime.c  proc_uptime.h  test_calc_uptime.c
libraries/: CMakeLists.txt
libraries/include/: stack.h
libraries/src/: fun.c  stack.c  state.c
tests/: CMakeLists.txt  test_stack.c  test_state.c
